--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="errorOccurred">Error Occurred</string>
+    <string name="retry">Retry</string>
+    <string name="close">Close</string>
 </resources>
